erDiagram
    TEAM {
        int team_id PK
    }

    EMPLOYEE {
        int employee_id PK
        string first_name
        string last_name
        string modality
        string phone_number
        string position
    }

    TASK {
        int task_id PK
        date start_date
        date end_date
        date expected_end_date
        string description
    }

    EMPLOYEE_TEAM {
        int employee_id FK
        int team_id FK
    }

    EMPLOYEE_TASK {
        int employee_id FK
        int task_id FK
    }

    EMPLOYEE ||--o{ EMPLOYEE_TEAM : belongs_to
    TEAM     ||--o{ EMPLOYEE_TEAM : has_members

    EMPLOYEE ||--o{ EMPLOYEE_TASK : assigned_to
    TASK     ||--o{ EMPLOYEE_TASK : has_assignees
